k8s/10-user-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-db
  namespace: shoplite
spec:
  replicas: 1
  selector:
    matchLabels: { app: user-db }
  template:
    metadata:
      labels: { app: user-db }
    spec:
      containers:
        - name: user-db
          image: postgres:16.4-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "$(POSTGRES_USER)", "-d", "$(POSTGRES_DB)"]
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests: { cpu: "100m", memory: "128Mi" }
            limits: { cpu: "300m", memory: "256Mi" }
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: user-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: user-db
  namespace: shoplite
spec:
  selector: { app: user-db }
  ports:
    - port: 5432
      targetPort: 5432
