k8s/12-catalog-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-db
  namespace: shoplite
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: { app: catalog-db }
  template:
    metadata:
      labels: { app: catalog-db }
    spec:
      containers:
        - name: catalog-db
          image: mongo:7.0.12
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: data
              mountPath: /data/db
          readinessProbe:
            exec:
              command:
                - mongosh
                - --quiet
                - --username
                - "$(MONGO_INITDB_ROOT_USERNAME)"
                - --password
                - "$(MONGO_INITDB_ROOT_PASSWORD)"
                - --authenticationDatabase
                - admin
                - --eval
                - "db.adminCommand('ping').ok"
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 10
          resources:
            requests: { cpu: "100m", memory: "128Mi" }
            limits: { cpu: "300m", memory: "256Mi" }
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: catalog-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-db
  namespace: shoplite
spec:
  selector: { app: catalog-db }
  ports:
    - port: 27017
      targetPort: 27017
