k8s/13-notification-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-db
  namespace: shoplite
spec:
  replicas: 1
  selector:
    matchLabels: { app: notification-db }
  template:
    metadata:
      labels: { app: notification-db }
    spec:
      containers:
        - name: notification-db
          image: redis:7.2.5-alpine
          command: ["redis-server", "--appendonly", "yes", "--requirepass", "$(REDIS_PASSWORD)"]
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: data
              mountPath: /data
          readinessProbe:
            exec:
              command: ["sh", "-c", "redis-cli -a \"$REDIS_PASSWORD\" ping | grep PONG"]
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests: { cpu: "50m", memory: "64Mi" }
            limits: { cpu: "200m", memory: "128Mi" }
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: notification-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: notification-db
  namespace: shoplite
spec:
  selector: { app: notification-db }
  ports:
    - port: 6379
      targetPort: 6379
