k8s/31-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shoplite-frontend-ingress
  namespace: shoplite
spec:
  ingressClassName: nginx
  rules:
    - host: shoplite.local
      http:
        paths:
          - path: /static
            pathType: Prefix
            backend:
              service:
                name: user-service
                port: { number: 8000 }
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user-service
                port: { number: 8000 }
